test/integration/bad/tuples/bad-index1.stan
transformed data {
   real x = 3.4;
   print(x.1);
}
